test/libsolidity/syntaxTests/nameAndTypeResolution/077_fallback_function_with_return_parameters.sol
contract C {
    function() external returns (uint) { }
}
// ----
// TypeError: (45-51): Fallback function cannot return values.
